[package]
name = "id-map"
version = "0.1.0"
authors = ["johannesvollmer <johannes596@t-online.de>"]
description = "Simplify Graphs in Rust. Introduces struct Map<Id, T>, which automatically creates Ids for each new object, reusing deleted Ids. "
repository = "https://github.com/johannesvollmer/id-map"
readme = "README.md"
keywords = ["map", "graph", "index", "id"]
categories = ["data-structures", "memory-management", "rust-patterns"]
license = "MIT"
maintenance = { status = "passively-maintained" }

[dependencies]
# num-traits = "0.2"
